--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <title>Todo</title>
+    <script src="App.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
